[metadata]
name = gpxray
author = Axel Donath
author_email = axel.donath@cfa.harvard.edu
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/adonath/gpxray
description = An experimental package to use Gammapy for x-ray data analysis
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
  gammapy>=v1.0rc1


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "gpxray" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  gpxray/__init*
  gpxray/conftest.py
  gpxray/*setup_package*
  gpxray/tests/*
  gpxray/*/tests/*
  gpxray/extern/*
  gpxray/version*
  */gpxray/__init*
  */gpxray/conftest.py
  */gpxray/*setup_package*
  */gpxray/tests/*
  */gpxray/*/tests/*
  */gpxray/extern/*
  */gpxray/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
